<resources>
    <string name="app_name">Agenda</string>
    <string name="eliminar">Eliminar</string>
    <string name="filtrar">Filtrar</string>
    <string name="description">Description</string>
    <string name="update">update</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="descrption">Descrption</string>
    <string name="telefono">Telefono</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="notas">Notas</string>
    <string name="ingresar">Ingresar</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre</string>
    <string name="a_n_no_tienes_datos">Aún no tienes datos</string>
    <string name="agregar_contacto">Agregar nota</string>
    <string name="editar_contacto">Editar nota</string>
    <string name="title">Title</string>
    <string name="contenido">Contenido</string>
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="agregar">Agregar</string>
    <string name="aceptar">Aceptar</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="register_success">Se ha guardado el registro correctamente</string>
    <string name="delete_ask">¿Estás seguro que deseas eliminar la nota?</string>
    <string name="aviso">Aviso</string>
    <array name="priority">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </array>
    <string name="error_db">Error en base de datos</string>
    <string name="prioridad">Prioridad</string>
</resources>